<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/state"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:hint="@string/state"
        android:textColor="#3F51B5"
        android:textColorHint="#3F51B5"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:hint="@string/temp"
        android:textColor="#3F51B5"
        android:textColorHint="#3F51B5"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/humd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/state" />

    <TextView
        android:id="@+id/humd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"
        android:hint="@string/humd"
        android:textColor="#3F51B5"
        android:textColorHint="#3F51B5"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/연결"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/temp" />

    <Button
        android:id="@+id/연결"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/BtnConnect"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humd" />

    <Button
        android:id="@+id/curtainsauto"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/curtainsauto"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opencurtains" />

    <TextView
        android:id="@+id/LED제어"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/led제어"
        android:textColor="#2196F3"
        android:textColorLink="#03A9F4"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/ledoff"
        app:layout_constraintStart_toEndOf="@+id/ledon"
        app:layout_constraintTop_toBottomOf="@+id/연결" />

    <TextView
        android:id="@+id/방범제어"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/crimepreventioncontrol"
        android:textColor="#2196F3"
        android:textColorLink="#03A9F4"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/cpcm"
        app:layout_constraintStart_toEndOf="@+id/cpca"
        app:layout_constraintTop_toBottomOf="@+id/curtainsauto" />

    <TextView
        android:id="@+id/커튼제어"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/curtainscontroll"
        android:textColor="#2196F3"
        android:textColorLink="#03A9F4"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/closecurtains"
        app:layout_constraintStart_toEndOf="@+id/opencurtains"
        app:layout_constraintTop_toBottomOf="@+id/LED제어" />

    <Button
        android:id="@+id/ledoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/led_off"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/LED제어"
        app:layout_constraintTop_toBottomOf="@+id/연결" />

    <Button
        android:id="@+id/ledon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/led_on"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/LED제어"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/연결" />

    <Button
        android:id="@+id/opencurtains"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/open"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/커튼제어"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ledon" />

    <Button
        android:id="@+id/closecurtains"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/close"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/커튼제어"
        app:layout_constraintTop_toBottomOf="@+id/ledoff" />

    <Button
        android:id="@+id/cpca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/automatic"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/방범제어"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curtainsauto" />

    <Button
        android:id="@+id/cpcm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/manual"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/방범제어"
        app:layout_constraintTop_toBottomOf="@+id/curtainsauto" />


</androidx.constraintlayout.widget.ConstraintLayout>